# nfc-card-game

./: .env.template  .gitignore  Caddyfile  Dockerfile  Makefile  compose.override.yml  compose.prod.yml  compose.yml  db_export.sql  docker-cmd.sh  docker-entrypoint.sh  dump_14_05_24.sql  manage.py  pyproject.toml  readme.md  reset_script.sh  split_csv.py  stress_test.py  vossen.txt
dashboard/: .gitignore  README.md  Settings.gd  export_presets.cfg  icon.svg.import  project.godot
dashboard/Prefabs/: BalanceGauge.tscn  FlowingLabel.tscn  Miner.tscn  TeamPanel.tscn
dashboard/Scenes/: BalanceGauge.tscn  Dashboard.tscn  FlowingLabel.tscn  Levels.tscn  Miner.tscn
dashboard/Scripts/: BalanceGauge.gd  DebugPanel.gd  FlowingLabel.gd  GameController.gd  Global.gd  Helpers.gd  Levels.gd  Miner.gd  MinerGrid.gd  MoneyDisplay.gd  ShowOnMobile.gd  WebSocketClient.gd  WindowManager.gd
dashboard/Scripts/Debug/: AddMiners.gd  Panel.gd
dashboard/Sprites/: Miner.tres  mountain.png.import
dashboard/Sprites/Bulldozer/: bulldozer_sheet.png.import
dashboard/Sprites/Drill/: drill_sheet.png.import  metal_slug_attack_drill.png.import
dashboard/Sprites/Logo/: icon.svg.import  icon512.png.import
dashboard/Themes/: Money font.tres  MoneyFont.tres  UbuntuMono-B.ttf.import
hardware_scanner/: decoder.py  platformio.ini
hardware_scanner/src/: main.cpp
nfc_card_game/: asgi.py  settings.py  urls.py  wsgi.py
nfc_card_game/main/: admin.py  api.py  api_consumer.py  apps.py  color.py  consumers.py  forms.py  game_loop.py  logic.py  models.py  routing.py  urls.py  views.py
(+112 files in other folders)
