[tool.poetry]
name = "nfc-card-game"
version = "0.1.0"
description = ""
authors = ["Quint van Dijk <quintvdijk@gmail.com>"]
readme = "readme.md"
packages = [{include = "nfc_card_game"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
pydantic = "^2.6.4"
schedule = "^1.2.1"
daphne = "^4.1.2"
channels = "^4.1.0"
channels-redis = "^4.2.0"
django-pwa = "^1.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.6.7"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
